feat: fetch friend
