# dtos/friend_dtos.go
@@ -1,0 +1,7 @@
+package dtos
+
+type GetFriendResponse struct {
+	ID                  string  `json:"id"`
+	FriendWalletAddress string  `json:"friend_wallet_address"`
+	Nickname            *string `json:"nickname"`
+}
